syntax = "proto3";

option csharp_namespace = "Discounts.Server";

package discounts;

service Discounts {

  rpc GenerateCode (GenerateCodeRequest) returns (GenerateCodeResponse);
  rpc UseCode (UseCodeRequest) returns (UseCodeResponse);
}

message GenerateCodeRequest {
  int32 count = 1;
  int32 length = 2;
}

message GenerateCodeResponse {
  bool result = 1;
  repeated string codes = 2;
}

message UseCodeRequest {
  string code = 1;
}

message UseCodeResponse {
  int32 result = 1;
}